--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "ibnduraid",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "نظام إدارة مدرسة ابن دريد",
   "dependencies": {
-    "body-parser": "^2.2.1",
     "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
