--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "description": "نظام إدارة مدرسة ابن دريد",
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
+    "express-session": "^1.18.2",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "sqlite": "^5.1.1",
